--- a/public/scss/addToCart_scss/addToCart.scss
+++ b/public/scss/addToCart_scss/addToCart.scss
@@ -32,6 +32,21 @@ a {
     color: rgb(0, 0, 0);
 }
 
+.cartNavigation {
+    background-color: white;
+    height: 4rem;
+    box-shadow: 0px 1px 8px -1px #e9e6e6;
+
+    nav {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        list-style: none;
+        padding: 0.5rem 1.5rem;
+    }
+}
+
 .cartProducts-wrapper {
     @include displayFlex();
     gap: 1.5rem;
@@ -44,94 +59,151 @@ a {
         .book-card {
             margin: 1.5rem 0rem;
             width: 30rem;
-            height: auto;
+            height: 23rem;
             display: flex;
-            border-radius: .5rem;
+            border-radius: 0.5rem;
             box-shadow: 1px 3px 16px -5px #dad9db;
             background-color: #fff;
 
             .product_quantity {
-                .b-img {
-                    height: auto;
+                height: 100%;
+                width: 45%;
+            }
 
-                    img {
-                        width: 100%;
-                        height: 100%;
-                    }
-                }
+            .b-img {
+                height: 80%;
+                width: 100%;
 
-                .quantity {
-                    height:auto;
-                    display: grid;
-                    place-items: center;
-
-                    div {
-                      @include displayFlex();
-                        gap: 1.5rem;
-                        padding: .5rem;
-
-                        i {
-                            background-color: #ffffff;
-                            height: 2rem;
-                            width: 2rem;
-                            border-radius: 50%;
-                            display: grid;
-                            place-items: center;
-                            font-style: normal;
-                            font-size: 1.3rem;
-                            font-weight: 500;
-                            box-shadow: 1px 1px 7px -3px black;
-                            cursor: pointer;
-                        }
-                    }
+                img {
+                    width: 100%;
+                    height: 100%;
                 }
             }
 
-            .b-content {
-                height: 30%;
-                padding: 1rem;
-                text-align: center;
+            .quantity {
+                height: 20%;
+                width: 100%;
+                display: grid;
+                place-items: center;
 
-                h3 {
-                    margin-top: 1rem;
-                    color: #2a363b;
-
-
-                }
-
-                .price {
-                    font-size: 2.3rem;
-                    font-weight: 700;
-                    margin-top: .6rem;
-                    color: #474747;
-                    opacity: .4;
-
-                    span {
-                        position: relative;
-                        font-size: 1.7rem;
-                    }
-                }
-
-                .price span::after {
-                    content: "";
-                    position: absolute;
-                    width: 100%;
-                    height: .2rem;
-                    background-color: rgb(0, 0, 0);
-                    top: calc(100% - 50%);
-                    left: 0;
-                }
-
-                .card-btn {
+                div {
                     @include displayFlex();
-                    justify-content: center;
-                    gap: 2rem;
-                    margin-top: 1.2rem;
+                    gap: 1.5rem;
+                    padding: .5rem;
 
-                    .custom-btn {
-                        @include custom-btn();
+                    i {
+                        background-color: #ffffff;
+                        height: 2rem;
+                        width: 2rem;
+                        border-radius: 50%;
+                        display: grid;
+                        place-items: center;
+                        font-style: normal;
+                        font-size: 1.3rem;
+                        font-weight: 500;
+                        box-shadow: 1px 1px 7px -3px black;
+                        cursor: pointer;
                     }
                 }
+            }
+        }
+
+        .b-content {
+            width: 55%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 1rem;
+            text-align: center;
+
+            h3 {
+                margin-top: 1rem;
+                color: #2a363b;
+                font-size: 1.6rem;
+                font-weight: 600;
+
+
+            }
+
+            .itemPrice {
+                font-size: 2rem;
+            }
+
+            .totalItemsPrice {
+                font-size: 1.3rem;
+
+                span {
+                    color: #ff2d2d;
+                }
+            }
+
+            .price {
+                font-size: 2.3rem;
+                font-weight: 700;
+                margin-top: .6rem;
+                color: #474747;
+                opacity: .4;
+
+                span {
+                    position: relative;
+                    font-size: 1.7rem;
+                }
+            }
+
+            .price span::after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: .2rem;
+                background-color: rgb(0, 0, 0);
+                top: calc(100% - 50%);
+                left: 0;
+            }
+
+            .card-btn {
+                @include displayFlex();
+                justify-content: center;
+                gap: 2rem;
+                // margin-top: 1.2rem;
+
+                .custom-btn {
+                    @include custom-btn();
+                }
+            }
+        }
+    }
+
+    .cartItemsBuy {
+        background-color: white;
+        display: flex;
+        width: 100%;
+        // position: fixed;
+        justify-content: space-around;
+        height: 6rem;
+        align-items: center;
+        top: calc(54% - 6rem);
+        left: 0;
+        box-shadow: 0px 1px 10px -8px black;
+
+        .total {
+            span {
+                letter-spacing: .1rem;
+                font-size: 1.5rem;
+                font-weight: 500;
+            }
+        }
+
+        .place_order {
+            button {
+                background-color: yellow;
+                border: none;
+                width: 15rem;
+                height: 3.2rem;
+                font-size: 1.5rem;
+                border-radius: 5rem;
+                outline: none;
+                cursor: pointer;
             }
         }
     }
