--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,36 +1,107 @@
-<header class="{{data.loginStatus}}" id="header">
-  <nav>
-    <div class="logo">
-      <h1>Book <span>Store</span></h1>
-    </div>
-    <div class="search_bar">
-      <input class="search" type="text" placeholder="Search...">
-    </div>
-    <ul>
-      <a href="/singleProducts?cat=Science">
-        <li>Science</li>
-      </a>
-      <a href="/singleProducts?cat=History">
-        <li>History</li>
-      </a>
-      <a href="/singleProducts?cat=Math">
-        <li>Math</li>
-      </a>
-    </ul>
-    <div class="user-status">
-      <div class="login_btn">
-        <a href="/login" class="custom-btn">Login</a>
+<div class="superNav border-bottom py-2 bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 centerOnMobile">
+        <select class="me-3 border-0 bg-light">
+          <option value="en-us">EN-US</option>
+        </select>
+        <span
+          class="d-none d-lg-inline-block d-md-inline-block d-sm-inline-block d-xs-none me-3"><strong>info@somedomain.com</strong></span>
+        <span class="me-3"><i class="fa-solid fa-phone me-1 text-warning"></i> <strong>1-800-123-1234</strong></span>
       </div>
-      <div class="user-profile" style="display: flex;">
-        <div class="userCart">
-          <span class="cartItems">{{data._doc.userCart.length}}</span>
-        </div>
-        <div class="userLogo">
-          <img src="/img/hanuman (2).jpg" alt="">
-          <h2 >{{data._doc.name}}</h2>
-        </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 d-none d-lg-block d-md-block-d-sm-block d-xs-none text-end">
+        <span class="me-3"><i class="fa-solid fa-truck text-muted me-1"></i><a class="text-muted"
+            href="#">Shipping</a></span>
+        <span class="me-3"><i class="fa-solid fa-file  text-muted me-2"></i><a class="text-muted"
+            href="#">Policy</a></span>
       </div>
     </div>
+  </div>
+</div>
+<nav class="navbar navbar-expand-lg bg-white sticky-top navbar-light p-3 shadow-sm">
+  <div class="container">
+    <a class="navbar-brand" href="#"><i class="fa-solid fa-shop me-2"></i> <strong>S.K ECOMMERS</strong></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  </nav>
-</header>
+    <div class="mx-auto my-3 d-lg-none d-sm-block d-xs-block">
+      <div class="input-group">
+        <span class="border-warning input-group-text bg-warning text-white"><i
+            class="fa-solid fa-magnifying-glass"></i></span>
+        <input  type="text" id="searchInput" class="form-control border-warning" style="color:#7a7a7a">
+        <button  class="btn btn-warning text-white" id="searchBtn">Search</button>
+      </div>
+    </div>
+    <div class=" collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="ms-auto d-none d-lg-block">
+        <div class="input-group">
+          <span class="border-warning input-group-text bg-warning text-white"><i
+              class="fa-solid fa-magnifying-glass"></i></span>
+          <input type="text" class="form-control border-warning" style="color:#7a7a7a">
+          <button class="btn btn-warning text-white">Search</button>
+        </div>
+      </div>
+      <ul class="navbar-nav ms-auto ">
+        <li class="nav-item">
+          <a class="nav-link mx-2 text-uppercase active" aria-current="page" href="#">Offers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mx-2 text-uppercase" href="#">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mx-2 text-uppercase" href="#">Catalog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mx-2 text-uppercase" href="#">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mx-2 text-uppercase" href="#">About</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ms-auto ">
+        <li class="nav-item">
+          <a class="nav-link mx-2 text-uppercase" href="#">
+            <i class="fas fa-bell me-1 position-relative"><span
+                class="badge rounded-pill badge-notification bg-danger position-absolute"
+                style="top: -12px;left:3px">1</span>
+            </i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mx-2 text-uppercase" href="#">
+            <i class="fa-solid fa-cart-shopping me-1 position-relative"><span
+                class="badge rounded-pill badge-notification bg-danger position-absolute"
+                style="top: -12px;left:8px">1</span>
+            </i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mx-2 text-uppercase" href="/account/page?action=profile"><i class="fa-solid fa-circle-user me-1"></i></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <style>
+    a {
+      font-size: 14px;
+      font-weight: 700
+    }
+
+    .superNav {
+      font-size: 13px;
+    }
+
+    .form-control {
+      outline: none !important;
+      box-shadow: none !important;
+    }
+
+    @media screen and (max-width:540px) {
+      .centerOnMobile {
+        text-align: center
+      }
+    }
+  </style>
+</nav>
