--- a/templates/views/addToCart.hbs
+++ b/templates/views/addToCart.hbs
@@ -5,28 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    {{>common.links}}
     <link rel="stylesheet" href="/scss/addToCart_scss/addToCart.css">
     <link rel="stylesheet" href="/scss/home_scss/home.css">
 </head>
 
 <body>
     {{>navbar}}
-    <div class="cartNavigation">
-        <nav>
-            <li>My Cart</li>
-        </nav>
-    </div>
-    <div class="cartProducts-wrapper">
-        <div class="products">
-
+    <div class="main_wrapper">
+        <div class="cartNavigation">
+            <nav>
+                <li>My Cart</li>
+            </nav>
         </div>
-        <div class="cartItemsBuy">
+        <div class="cartProducts-wrapper">
+            <div class="products" id="products">
 
+            </div>
+            <div class="cartItemsBuy">
+                <div class="total">
+                    <span class="total_price">5959595</span>
+                </div>
+                <div class="place_order">
+                    <button id="placeOrder">Place order</button>
+                </div>
+            </div>
         </div>
     </div>
-    
-    <script src="/js/index.js"></script> 
+    {{>footer}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/common.js"></script>
     <script src="/js/addToCart.js"></script>
+    <script>
+    </script>
 </body>
 
 </html>
