--- a/templates/views/single.hbs
+++ b/templates/views/single.hbs
@@ -4,23 +4,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>single</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="/scss/single_scss/single.css">
-         <link rel="stylesheet" href="/scss/home_scss/home.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/scss/single_scss/single.css">
+    <link rel="stylesheet" href="/scss/home_scss/home.css">
+    <script defer src="/js/common.js"></script>
+    <script defer src="/js/single.js"></script>
 </head>
 
 <body>
     {{>navbar}}
-    <section>
-        <div class="product_single">
-           
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-4 ">
+                <div class="row sticky-top" style="z-index: 1019;">
+                    <div class="col-4">
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination productImgList" style="display: unset;text-align: center;">
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col-8 d-flex " style="flex-direction: column;">
+                        <div class="row product_img_shower">
+                            {{!-- <img src="/products_img/Weapons of Math Destruction.jpg" alt=""> --}}
+                        </div>
+                        <div class="row mt-auto">
+                            <div class="col">
+                                <button type="button" class="btn w-100 btn-primary" id="buyBtn">Buy</button>
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn w-100 btn-secondary" id="add-to-cart">Add to cart</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-8 ">
+                <div class="row">
+                    <div class="col">
+                        <div class="card border-primary mb-3">
+                            <div class="card-body" id="productCard">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="accordion" id="prductAccordion">
+
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col m-auto">
+                        <h5 class="card-title">Special title treatment</h5>
+                    </div>
+                    <div class="col">
+                        <div class="card border-0">
+                            <div class="card-body ms-auto">
+                                <button type="button" class="btn btn-outline-warning">Warning</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="d-flex">
+                            <div class="card border-0">
+                                <div class="card-body text-center">
+                                    <h5 class="card-title product_rating">4.1<i class="fa-solid fa-star"></i></h5>
+                                    <p class="card-text">23344 Ratings&4546 Reviews</p>
+                                    <div class="d-flex gap-2 product_star_rating"
+                                        style="flex-direction: row; justify-content: center;">
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card w-100 border-0">
+                                <div class="card-body product_progress">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row reviews">
+
+                </div>
+            </div>
         </div>
-    </section>
-    <script src="/js/single.js"></script>
-    <script src="/js/index.js"></script>
+    </div>
+    {{>footer}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    
 </body>
 
 </html>
