--- a/templates/views/singleProducts.hbs
+++ b/templates/views/singleProducts.hbs
@@ -5,149 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>categories books</title>
-    <link rel="stylesheet" href="/scss/singleProducts_scss/singleProducts.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/scss/single_scss/single.css">
     <link rel="stylesheet" href="/scss/home_scss/home.css">
+
 </head>
 
 <body>
     {{>navbar}}
-    <section style="padding: 1rem;">
-        <h2 style="text-align: center;">Math Books</h2>
-        <div class="single_categories_wrapper">
-            <div class="book-card">
-                <div class="b-img">
-                    <img src="/img/hanuman (2).jpg" alt="">
-                </div>
-                <div class="b-content">
-                    <h3>Nutan book</h3>
-                    <div class="price">$24.55 <span>$30.5</span></div>
-                    <div class="card-btn">
-                        <a href="" class="custom-btn buy-btn">Buy</a>
-                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="book-card">
-                <div class="b-img">
-                    <img src="/img/hanuman (2).jpg" alt="">
-                </div>
-                <div class="b-content">
-                    <h3>Nutan book</h3>
-                    <div class="price">$24.55 <span>$30.5</span></div>
-                    <div class="card-btn">
-                        <a href="/single" class="custom-btn buy-btn">Buy</a>
-                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="book-card">
-                <div class="b-img">
-                    <img src="/img/hanuman (2).jpg" alt="">
-                </div>
-                <div class="b-content">
-                    <h3>Nutan book</h3>
-                    <div class="price">$24.55 <span>$30.5</span></div>
-                    <div class="card-btn">
-                        <a href="/single" class="custom-btn buy-btn">Buy</a>
-                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="book-card">
-                <div class="b-img">
-                    <img src="/img/hanuman (2).jpg" alt="">
-                </div>
-                <div class="b-content">
-                    <h3>Nutan book</h3>
-                    <div class="price">$24.55 <span>$30.5</span></div>
-                    <div class="card-btn">
-                        <a href="/single" class="custom-btn buy-btn">Buy</a>
-                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="book-card">
-                <div class="b-img">
-                    <img src="/img/hanuman (2).jpg" alt="">
-                </div>
-                <div class="b-content">
-                    <h3>Nutan book</h3>
-                    <div class="price">$24.55 <span>$30.5</span></div>
-                    <div class="card-btn">
-                        <a href="/single" class="custom-btn buy-btn">Buy</a>
-                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="book-card">
-                <div class="b-img">
-                    <img src="/img/hanuman (2).jpg" alt="">
-                </div>
-                <div class="b-content">
-                    <h3>Nutan book</h3>
-                    <div class="price">$24.55 <span>$30.5</span></div>
-                    <div class="card-btn">
-                        <a href="/single" class="custom-btn buy-btn">Buy</a>
-                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="book-card">
-                <div class="b-img">
-                    <img src="/img/hanuman (2).jpg" alt="">
-                </div>
-                <div class="b-content">
-                    <h3>Nutan book</h3>
-                    <div class="price">$24.55 <span>$30.5</span></div>
-                    <div class="card-btn">
-                        <a href="/single" class="custom-btn buy-btn">Buy</a>
-                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="book-card">
-                <div class="b-img">
-                    <img src="/img/hanuman (2).jpg" alt="">
-                </div>
-                <div class="b-content">
-                    <h3>Nutan book</h3>
-                    <div class="price">$24.55 <span>$30.5</span></div>
-                    <div class="card-btn">
-                        <a href="/single" class="custom-btn buy-btn">Buy</a>
-                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="book-card">
-                <div class="b-img">
-                    <img src="/img/hanuman (2).jpg" alt="">
-                </div>
-                <div class="b-content">
-                    <h3>Nutan book</h3>
-                    <div class="price">$24.55 <span>$30.5</span></div>
-                    <div class="card-btn">
-                        <a href="/single" class="custom-btn buy-btn">Buy</a>
-                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="book-card">
-                <div class="b-img">
-                    <img src="/img/hanuman (2).jpg" alt="">
-                </div>
-                <div class="b-content">
-                    <h3>Nutan book</h3>
-                    <div class="price">$24.55 <span>$30.5</span></div>
-                    <div class="card-btn">
-                        <a href="/single" class="custom-btn buy-btn">Buy</a>
-                        <a href="" class="custom-btn add-to-cart">Add to cart</a>
-                    </div>
-                </div>
-            </div>
+    <div class="container-fluid" style="padding: 2rem;">
+        <div class="row single_categories_wrapper">
+            
         </div>
-    </section>
-    <script src="/js/index.js"></script>
+    </div>
+    {{>footer}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/common.js"></script>
     <script src="/js/singleProducts.js"></script>
+    <script>
+
+    </script>
 </body>
 
 </html>
