--- a/templates/views/workingArea.hbs
+++ b/templates/views/workingArea.hbs
@@ -11,16 +11,20 @@
 <body>
     <div class="input-area">
         <form action="/bookStore/operations" enctype="multipart/form-data" method="post">
-            <input type="text" name="book" placeholder="book.." required autocomplete="off">
-            <input type="text" name="category" placeholder=" category.." required autocomplete="off">
-            <input type="file" name="img" placeholder="choose image.." required autocomplete="off">
+            <input type="text" name="productType" placeholder="Product Type ( book,electronic, etc.)">
+            <input type="text" name="name" placeholder="product.." required autocomplete="off">
+            <input type="text" name="genres" placeholder="genres.." required autocomplete="off">
+            <input type="file" name="image" placeholder="product image.." required autocomplete="off">
             <input type="text" name="author" placeholder="author.." required autocomplete="off">
-            <input type="date" name="publishingdate" placeholder="date.." required autocomplete="off">
-            <input type="text" name="discription" placeholder="discription.." required autocomplete="off">
+            <input type="text" name="description" placeholder="description.." required autocomplete="off">
             <input type="text" name="publisher" placeholder="publisher.." required autocomplete="off">
             <input type="text" name="edition" placeholder="edition.." required autocomplete="off">
-            <input type="text" name="nopage" placeholder="pages.." required autocomplete="off">
+            <input type="text" name="pageCount" placeholder="pages.." required autocomplete="off">
             <input type="text" name="language" placeholder="language.." required autocomplete="off">
+            <input type="text" name="formats" placeholder="formats.." required autocomplete="off">
+            <input type="text" name="keywords" placeholder="keywords..." required autocomplete="off">
+            <input type="text" name="discountsType" placeholder="discountTypes.." required autocomplete="off">
+            <input type="text" name="discountsAmount" placeholder="discount mounts.." required autocomplete="off">
             <button type="submit">Publish</button>
         </form>
     </div>
