--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -33,7 +33,7 @@
 
                                     <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-                                    <form class="mx-1 mx-md-4" action="/user/operations/signup" method="post">
+                                    <form class="mx-1 mx-md-4" id="signupForm">
 
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -57,17 +57,16 @@
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
-                                                <input type="password" id="form3Example4c" class="form-control" />
+                                                <input type="password" name="password" id="form3Example4c" class="form-control" />
                                                 <label class="form-label" for="form3Example4c">Password</label>
                                             </div>
                                         </div>
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
-                                                <input type="password" name="password" name="confirm"
-                                                    placeholder="confirm password.." required autocomplete="off"
-                                                    placeholder="password.." required autocomplete="off"
-                                                    id="form3Example4cd" class="form-control" />
+                                                <input type="password" placeholder="confirm password.." required
+                                                    autocomplete="off" placeholder="password.." required
+                                                    autocomplete="off" id="form3Example4cd" class="form-control" />
                                                 <label class="form-label" for="form3Example4cd">Repeat your
                                                     password</label>
                                             </div>
@@ -82,7 +81,7 @@
                                         </div> --}}
 
                                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                            <button type="button"
+                                            <button type="submit"
                                                 class="btn btn-primary btn-lg w-100 rounded-pill">Register</button>
                                         </div>
                                         <div class="divider d-flex align-items-center my-4">
@@ -122,7 +121,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="/js/login.js"></script>
+    <script src="/js/signup.js"></script>
 </body>
 
 </html>
