--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -30,8 +30,8 @@
       <div class="input-group">
         <span class="border-warning input-group-text bg-warning text-white"><i
             class="fa-solid fa-magnifying-glass"></i></span>
-        <input  type="text" id="searchInput" class="form-control border-warning" style="color:#7a7a7a">
-        <button  class="btn btn-warning text-white" id="searchBtn">Search</button>
+        <input type="text" id="searchInput" class="form-control border-warning" style="color:#7a7a7a">
+        <button class="btn btn-warning text-white" id="searchBtn">Search</button>
       </div>
     </div>
     <div class=" collapse navbar-collapse" id="navbarNavDropdown">
@@ -51,35 +51,14 @@
           <a class="nav-link mx-2 text-uppercase" href="#">Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mx-2 text-uppercase" href="#">Catalog</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link mx-2 text-uppercase" href="#">Services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link mx-2 text-uppercase" href="#">About</a>
         </li>
       </ul>
-      <ul class="navbar-nav ms-auto ">
-        <li class="nav-item">
-          <a class="nav-link mx-2 text-uppercase" href="#">
-            <i class="fas fa-bell me-1 position-relative"><span
-                class="badge rounded-pill badge-notification bg-danger position-absolute"
-                style="top: -12px;left:3px">1</span>
-            </i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link mx-2 text-uppercase" href="#">
-            <i class="fa-solid fa-cart-shopping me-1 position-relative"><span
-                class="badge rounded-pill badge-notification bg-danger position-absolute"
-                style="top: -12px;left:8px">1</span>
-            </i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link mx-2 text-uppercase" href="/account/page?action=profile"><i class="fa-solid fa-circle-user me-1"></i></a>
-        </li>
+      <ul class="navbar-nav ms-auto userStatus">
+
       </ul>
     </div>
   </div>
