--- a/templates/views/single.hbs
+++ b/templates/views/single.hbs
@@ -37,7 +37,8 @@
                                 <button type="button" class="btn w-100 btn-primary" id="buyBtn">Buy</button>
                             </div>
                             <div class="col">
-                                <button type="button" class="btn w-100 btn-secondary" id="add-to-cart">Add to cart</button>
+                                <button type="button" class="btn w-100 btn-secondary" id="add-to-cart">Add to
+                                    cart</button>
                             </div>
                         </div>
                     </div>
@@ -63,12 +64,14 @@
                 </div>
                 <div class="row">
                     <div class="col m-auto">
-                        <h5 class="card-title">Special title treatment</h5>
+                        <h5 class="card-title">Reviews & Ratings</h5>
                     </div>
                     <div class="col">
                         <div class="card border-0">
                             <div class="card-body ms-auto">
-                                <button type="button" class="btn btn-outline-warning">Warning</button>
+                                <button type="button" class="btn btn-outline-warning" id="openReviewForm" data-bs-toggle="modal"
+                                    data-bs-target="#ratingModel" data-bs-whatever="@getbootstrap">Rate this
+                                    product</button>
                             </div>
                         </div>
                     </div>
@@ -105,7 +108,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
-    
+
 </body>
 
 </html>
