add accout card,add spinner on btn,add window replace in files

--- a/templates/views/changeList.hbs
+++ b/templates/views/changeList.hbs
@@ -27,7 +27,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Name:</h5>
                         <p class="card-text">{{username}}</p>
-                        <a href="/account/page?action=changeName&&target=651ad4be945a5bf1c96b5322" class="btn btn-primary" type="submit">Edit</a>
+                        <a href="/account/page?action=changeName&&target={{_id}}" class="btn btn-primary" type="submit">Edit</a>
                     </div>
                 </div>
             </li>
@@ -36,7 +36,7 @@
                     <div class="card-body">
                         <h5 class="card-title">E-mail:</h5>
                         <p class="card-text">{{email}}</p>
-                        <a href="/account/page?action=changeEmail&&target=651ad4be945a5bf1c96b5322" class="btn btn-primary" type="submit">Edit</a>
+                        <a href="/account/page?action=changeEmail&&target={{_id}}" class="btn btn-primary" type="submit">Edit</a>
                     </div>
                 </div>
             </li>
@@ -45,7 +45,7 @@
                     <div class="card-body">
                         <h5 class="card-title">password:</h5>
                         <p class="card-text">.....</p>
-                        <a href="/account/page?action=changePassword&&target=651ad4be945a5bf1c96b5322" class="btn btn-primary" type="submit">Edit</a>
+                        <a href="/account/page?action=changePassword&&target={{_id}}" class="btn btn-primary" type="submit">Edit</a>
                     </div>
                 </div>
             </li>
@@ -54,7 +54,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Mobile Number:</h5>
                         <p class="card-text">{{mobilenumber}}</p>
-                        <a href="/account/page?action=changeNumber&&target=651ad4be945a5bf1c96b5322" class="btn btn-primary" type="submit">Edit</a>
+                        <a href="/account/page?action=changeNumber&&target={{_id}}" class="btn btn-primary" type="submit">Edit</a>
                     </div>
                 </div>
             </li>
