--- a/templates/views/changeName.hbs
+++ b/templates/views/changeName.hbs
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+     {{>navbar}}
     <div class="container p-2 accountSettings">
         <h2>Change Name</h2>
         <nav aria-label="breadcrumb">
