--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -65,7 +65,7 @@
                                         </div>
                                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                                             <button  type="submit"
-                                                class="btn btn-primary btn-lg w-100 rounded-pill">Register</button>
+                                                class="btn btn-primary btn-lg w-100 rounded-pill" id="loginBtn">Login</button>
                                         </div>
 
 
@@ -88,6 +88,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <script src="/js/common.js"></script>
     <script src="/js/login.js"></script>
 </body>
 
