--- a/templates/views/profile.hbs
+++ b/templates/views/profile.hbs
@@ -5,25 +5,156 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documentfsdfsdfsdf</title>
+    <link rel="stylesheet" type="text/css"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap-extended.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/fonts/simple-line-icons/style.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/colors.min.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        .timeline-with-icons {
+            border-left: 1px solid hsl(0, 0%, 90%);
+            position: relative;
+            list-style: none;
+        }
+
+        .timeline-with-icons .timeline-item {
+            position: relative;
+        }
+
+        .timeline-with-icons .timeline-item:after {
+            position: absolute;
+            display: block;
+            top: 0;
+        }
+
+        .timeline-with-icons .timeline-icon {
+            position: absolute;
+            left: -48px;
+            background-color: hsl(217, 88.2%, 90%);
+            color: hsl(217, 88.8%, 35.1%);
+            border-radius: 50%;
+            height: 31px;
+            width: 31px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container p-2 accountSettings">
-        <a href="/orders">Orders</a>
-        <a href="/account/page?action=changeList&&target=651ad4be945a5bf1c96b5322">Login&Security</a>
+    <div class="grey-bg container-fluid accountSettings">
+        <section id="minimal-statistics">
+            <div class="row">
+                <div class="col-12 mt-3 mb-1">
+                    <h4 class="text-uppercase">Your Account</h4>
+                    {{!-- /<p></p> --}}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-3 col-sm-6 col-12">
+                    <a href="/orders">
+
+                        <div class="card">
+                            <div class="card-content">
+                                <div class="card-body" style="height: 120px;">
+                                    <div class="media d-flex align-items-center">
+                                        <div class="align-self-center">
+                                            <i
+                                                class="fa-solid fa-cart-flatbed-suitcase primary font-large-2 float-left"></i>
+                                        </div>
+                                        <div class="media-body text-right">
+                                            <h3>{{orderHistory.length}}</h3>
+                                            <span>Orders</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-xl-3 col-sm-6 col-12">
+                    <a href="/account/page?action=changeList&&target={{_id}}">
+
+                        <div class="card">
+                            <div class="card-content">
+                                <div class="card-body" style="height: 120px;">
+                                    <div class="media d-flex align-items-center">
+                                        <div class="align-self-center">
+                                            <i class="fa-solid fa-lock warning font-large-2 float-left"></i>
+
+                                        </div>
+                                        <div class="media-body text-right">
+                                            <!-- <h3>156</h3> -->
+                                            <span>Login&Security</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-xl-3 col-sm-6 col-12">
+                    <a href="/addToCart">
+                        <div class="card">
+                            <div class="card-content">
+                                <div class="card-body" style="height: 120px;">
+                                    <div class="media d-flex align-items-center">
+                                        <div class="align-self-center">
+                                            <i class="fa-solid fa-cart-shopping success font-large-2 float-left"></i>
+                                            <!-- <i class="icon-graph "></i> -->
+                                        </div>
+                                        <div class="media-body text-right">
+                                            <h3>{{cart.length}}</h3>
+                                            <span>Cart</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-xl-3 col-sm-6 col-12">
+                    <a href="">
+
+                        <div class="card">
+                            <div class="card-content">
+                                <div class="card-body" style="height: 120px;">
+                                    <div class="media d-flex align-items-center">
+                                        <div class="align-self-center">
+                                            <i class="fa-solid fa-headset danger font-large-2 float-left"></i>
+                                        </div>
+                                        <div class="media-body text-right">
+                                            <h3>423</h3>
+                                            <span>Customer Care</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+        </section>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
     <script>
-
-    
     </script>
 
 </body>
