--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -57,7 +57,8 @@
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
-                                                <input type="password" name="password" id="form3Example4c" class="form-control" />
+                                                <input type="password" name="password" id="form3Example4c"
+                                                    class="form-control" />
                                                 <label class="form-label" for="form3Example4c">Password</label>
                                             </div>
                                         </div>
@@ -81,8 +82,8 @@
                                         </div> --}}
 
                                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                            <button type="submit"
-                                                class="btn btn-primary btn-lg w-100 rounded-pill">Register</button>
+                                            <button type="submit" class="btn btn-primary btn-lg w-100 rounded-pill"
+                                                id="signupBtn">Register</button>
                                         </div>
                                         <div class="divider d-flex align-items-center my-4">
                                             <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
@@ -121,6 +122,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="/js/common.js"></script>
     <script src="/js/signup.js"></script>
 </body>
 
