--- a/templates/views/single.hbs
+++ b/templates/views/single.hbs
@@ -10,17 +10,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/scss/single_scss/single.css">
-    <link rel="stylesheet" href="/scss/home_scss/home.css">
     <script defer src="/js/common.js"></script>
     <script defer src="/js/single.js"></script>
 </head>
-
 <body>
     {{>navbar}}
-    <div class="container">
+    <div class="container" style="padding-top:2rem ;">
         <div class="row">
-            <div class="col-sm-12 col-lg-4 ">
+            <div class="col-sm-12 col-lg-4">
                 <div class="row sticky-top" style="z-index: 1019;">
                     <div class="col-4">
                         <nav aria-label="Page navigation example">
@@ -29,7 +26,7 @@
                         </nav>
                     </div>
                     <div class="col-8 d-flex " style="flex-direction: column;">
-                        <div class="row product_img_shower">
+                        <div class="row product_img_shower mb-2">
                             {{!-- <img src="/products_img/Weapons of Math Destruction.jpg" alt=""> --}}
                         </div>
                         <div class="row mt-auto">
@@ -37,8 +34,7 @@
                                 <button type="button" class="btn w-100 btn-primary" id="buyBtn">Buy</button>
                             </div>
                             <div class="col">
-                                <button type="button" class="btn w-100 btn-secondary" id="add-to-cart">Add to
-                                    cart</button>
+                                <button type="button" class="btn w-100 btn-secondary" id="add-to-cart">Cart</button>
                             </div>
                         </div>
                     </div>
