--- a/templates/views/changeNumber.hbs
+++ b/templates/views/changeNumber.hbs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-     {{>navbar}}
+    {{>navbar}}
     <div class="container p-2 accountSettings">
         <h2>Change Number</h2>
         <nav aria-label="breadcrumb">
@@ -289,8 +289,9 @@
                     </select>
                 </div>
                 <div class="col-12">
-                    <input type="text" class="form-control"  name="newnumber" id="validationCustom02" value="" required>
-                    <input type="hidden" class="form-control" id="validationCustom01" name="type" value="mobnumber" required>
+                    <input type="text" class="form-control" name="newnumber" id="validationCustom02" value="" required>
+                    <input type="hidden" class="form-control" id="validationCustom01" name="type" value="mobnumber"
+                        required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -305,9 +306,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-         <script src="/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/common.js"></script>
-    
+
     <script src="/js/userSettings.js"></script>
     <script>
 
