--- a/templates/views/changeName.hbs
+++ b/templates/views/changeName.hbs
@@ -12,6 +12,14 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
+<style>
+    .wrapper_container{
+background-color: red;
+color: red;
+border-radius: 10px;
+border: 2px solid black;
+    }
+</style>
 <body>
      {{>navbar}}
     <div class="container p-2 accountSettings">
