--- a/templates/views/changePassword.hbs
+++ b/templates/views/changePassword.hbs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-     {{>navbar}}
+    {{>navbar}}
     <div class="container p-2 accountSettings">
         <h2>Change Password</h2>
         <nav aria-label="breadcrumb">
@@ -37,7 +37,8 @@
                     <label for="validationCustom02" class="form-label">New password</label>
                     <input type="text" class="form-control" id="validationCustom02" name="newpassword" value=""
                         required>
-                    <input type="hidden" class="form-control" id="validationCustom01" name="type" value="password" required>
+                    <input type="hidden" class="form-control" id="validationCustom01" name="type" value="password"
+                        required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -59,7 +60,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-         <script src="/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/common.js"></script>
     <script src="/js/userSettings.js"></script>
     <script>
