--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -1,130 +1,188 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <title>Signup</title>
     <style>
-        .divider:after,
-        .divider:before {
-            content: "";
-            flex: 1;
-            height: 1px;
-            background: #eee;
-        }
+      .divider:after, .divider:before { content: ""; flex: 1; height: 1px;
+      background: #eee; }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <section class="vh-100" style="background-color: #eee;">
-        <div class="container h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-lg-12 col-xl-11">
-                    <div class="card text-black" style="border-radius: 25px;">
-                        <div class="card-body p-md-5">
-                            <div class="row justify-content-center">
-                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+      <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-lg-12 col-xl-11">
+            <div class="card text-black" style="border-radius: 25px;">
+              <div class="card-body p-md-5">
+                <div class="row justify-content-center">
+                  <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                    <p
+                      class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4"
+                    >Sign up</p>
 
-                                    <form class="mx-1 mx-md-4" id="signupForm">
+                    <form class="mx-1 mx-md-4" id="signupForm">
 
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <input type="text" name="name" placeholder="name.." required
-                                                    autocomplete="off" id="form3Example1c" class="form-control" />
-                                                <label class="form-label" for="form3Example1c">Your Name</label>
-                                            </div>
-                                        </div>
+                      <div class="d-flex flex-row align-items-center mb-4">
+                        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                        <div class="form-outline flex-fill mb-0">
+                          <input
+                            type="text"
+                            name="name"
+                            placeholder="name.."
+                            required
+                            autocomplete="off"
+                            id="form3Example1c"
+                            class="form-control"
+                          />
+                          <label class="form-label" for="form3Example1c">Your
+                            Name</label>
+                        </div>
+                      </div>
 
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <input type="email" id="form3Example3c" name="email"
-                                                    placeholder=" email.." required autocomplete="off"
-                                                    class="form-control" />
-                                                <label class="form-label" for="form3Example3c">Your Email</label>
-                                            </div>
-                                        </div>
+                      <div class="d-flex flex-row align-items-center mb-4">
+                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                        <div class="form-outline flex-fill mb-0">
+                          <input
+                            type="email"
+                            id="form3Example3c"
+                            name="email"
+                            placeholder=" email.."
+                            required
+                            autocomplete="off"
+                            class="form-control"
+                          />
+                          <label class="form-label" for="form3Example3c">Your
+                            Email</label>
+                        </div>
+                      </div>
 
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <input type="password" name="password" id="form3Example4c"
-                                                    class="form-control" />
-                                                <label class="form-label" for="form3Example4c">Password</label>
-                                            </div>
-                                        </div>
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <input type="password" placeholder="confirm password.." required
-                                                    autocomplete="off" placeholder="password.." required
-                                                    autocomplete="off" id="form3Example4cd" class="form-control" />
-                                                <label class="form-label" for="form3Example4cd">Repeat your
-                                                    password</label>
-                                            </div>
-                                        </div>
+                      <div class="d-flex flex-row align-items-center mb-4">
+                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                        <div class="form-outline flex-fill mb-0">
+                          <input
+                            type="password"
+                            name="password"
+                            id="form3Example4c"
+                            class="form-control"
+                          />
+                          <label
+                            class="form-label"
+                            for="form3Example4c"
+                          >Password</label>
+                        </div>
+                      </div>
+                      <div class="d-flex flex-row align-items-center mb-4">
+                        <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                        <div class="form-outline flex-fill mb-0">
+                          <input
+                            type="password"
+                            placeholder="confirm password.."
+                            required
+                            autocomplete="off"
+                            placeholder="password.."
+                            required
+                            autocomplete="off"
+                            id="form3Example4cd"
+                            class="form-control"
+                          />
+                          <label class="form-label" for="form3Example4cd">Repeat
+                            your password</label>
+                        </div>
+                      </div>
 
-                                        {{!-- <div class="form-check d-flex justify-content-center mb-5">
+                      {{! <div class="form-check d-flex justify-content-center mb-5">
                                             <input class="form-check-input me-2" type="checkbox" value=""
                                                 id="form2Example3c" />
                                             <label class="form-check-label" for="form2Example3">
                                                 I agree all statements in <a href="#!">Terms of service</a>
                                             </label>
-                                        </div> --}}
+                                        </div> }}
 
-                                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                            <button type="submit" class="btn btn-primary btn-lg w-100 rounded-pill"
-                                                id="signupBtn">Register</button>
-                                        </div>
-                                        <div class="divider d-flex align-items-center my-4">
-                                            <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-12 mb-3">
-                                                <a class="btn btn-primary w-100 rounded-pill btn-lg btn-block"
-                                                    style="background-color: #3b5998" href="#!" role="button">
-                                                    <i class="fab fa-facebook-f me-2"></i>Continue with Facebook
-                                                </a>
-                                            </div>
-                                            <div class="col-12 mb-3">
-
-                                                <a class="btn btn-primary w-100 rounded-pill btn-lg btn-block"
-                                                    style="background-color: #55acee" href="#!" role="button">
-                                                    <i class="fab fa-twitter me-2"></i>Continue with Twitter</a>
-                                            </div>
-                                        </div>
-
-                                    </form>
-
-                                </div>
-                                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                                        class="img-fluid" alt="Sample image">
-
-                                </div>
-                            </div>
+                      <div
+                        class="d-flex justify-content-center mx-4 mb-3 mb-lg-4"
+                      >
+                        <button
+                          type="submit"
+                          class="btn btn-primary btn-lg w-100 rounded-pill"
+                          id="signupBtn"
+                        >Register</button>
+                      </div>
+                      <div class="divider d-flex align-items-center my-4">
+                        <p
+                          class="text-center fw-bold mx-3 mb-0 text-muted"
+                        >OR</p>
+                      </div>
+                      <div class="row">
+                        <div class="col-12 mb-3">
+                          <a
+                            class="btn btn-primary w-100 rounded-pill btn-lg btn-block"
+                            style="background-color: #3b5998"
+                            href="#!"
+                            role="button"
+                          >
+                            <i class="fab fa-facebook-f me-2"></i>Continue with
+                            Facebook
+                          </a>
                         </div>
-                    </div>
+                        <div class="col-12 mb-3">
+
+                          <a
+                            class="btn btn-primary w-100 rounded-pill btn-lg btn-block"
+                            style="background-color: #55acee"
+                            href="#!"
+                            role="button"
+                          >
+                            <i class="fab fa-twitter me-2"></i>Continue with
+                            Twitter</a>
+                        </div>
+                      </div>
+
+                    </form>
+
+                  </div>
+                  <div
+                    class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2"
+                  >
+
+                    <img
+                      src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                      class="img-fluid"
+                      alt="Sample image"
+                    />
+
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-        <script src="/socket.io/socket.io.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/common.js"></script>
     <script src="/js/signup.js"></script>
-</body>
+  </body>
 
 </html>
